# CivMCSettlements

./: CivMCSettlements.json
.github/scripts/generate_civ_settlements/: CivMCSettlements.json  README.md  main.py  pyproject.toml  settlements_config.json
.github/workflows/: generate_settlements.yml
