[project]
name = "generate_civ_settlemets"
version = "1.0.0"
description = "Downloads data from https://docs.google.com/spreadsheets/d/1myQi-Y6-asM3UkoqUpDEAJSPvYiaOhx-oy7UthgweUk and generates a corresponding CivSettlements.json file"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.3",
    "requests>=2.32.5",
]
